# haskell-flake

./: .envrc  .gitattributes  .gitignore  CHANGELOG.md  Jenkinsfile  README.md  apm.lock.yaml  apm.yml  docs.json  docs.sh  flake-module.nix  flake.nix  haskell-project.nix  justfile  matrix.json  package-settings.nix  project-module.nix  rundoc.sh  runtest.sh  vira.hs
.apm/instructions/: workflow.instructions.md
.claude/commands/: talk.md
.claude/rules/: workflow.md
.github/workflows/: ci.yaml  flakestry.yaml  publish-docs.yaml  update-flake-lock-doc.yaml  (+2 more)
dev/: flake.nix
doc/: README  _category_.json  basics.md  debugging.md  defaults.md  dependency.md  devshell.md  examples.md  flake.nix  gotchas.md  guide.md  haskell-flake.md  hls.md  howto.md  incremental-builds.md  index.md  index.yaml  local.md  modules.md  package-set.md  ref.md  settings.md  standalone.md  start.md  test.sh  under-the-hood.md
docs/: examples.md  guide.md  index.yaml  ref.md  start.md
example/: example.cabal  flake.nix  test.sh
haskell-flake-test/: README.md  flake.nix  haskell-flake-test.cabal  hie.yaml
nix/: app-type.nix  build-haskell-package.nix  default-project-modules.nix  find-cabal-paths.nix  flake-module.nix  haskell-project.nix  haskellPathsInDir.nix  lib.nix  logging.nix  package-settings.nix  parser.nix  parser_tests.nix
test/: README.md  common.sh  flake.nix  script  test.sh
test/settings-defaults/: flake.nix  haskell-flake-test.cabal
test/settings-defaults/src/: Main.hs
test/simple/: README.md  flake.nix  haskell-flake-test.cabal  test-in-devshell.sh  test.sh
(+118 files in other folders)
