cabal-version:   3.0
name:            haskell-flake-test
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable haskell-flake-test
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base,
        -- Add a version constraint that fails unless jailbroken.
        --
        -- This exists to test if the user's setting to enable `jailbreak` paramounts
        -- `buildFromSdist`'s setting to disable it
        foo >= 0.2
    hs-source-dirs:   src
    default-language: Haskell2010
